2003-04-14  Brian Warner  <warner@lothar.com>

	* twisted/spread/flavors.py (Copyable.jellyFor): Use proper
	jellier .prepare/.preserve dance when .invoker is non-None. This
	fixes jellying of circular references when passed through PB
	connections.

	* twisted/test/test_newjelly.py: add test case that sets .invoker
	to verify that code path too

2003-04-14  Jonathan Lange  <jml@ids.org.au>
	* twisted/web/woven/controller.py (Controller): now, if getChild
	cannot find the requested child, it will ask getDynamicChild -- a
	method like getChild, but designed to be overriden by users.

2003-04-13  Bob Ippolito  <bob@redivi.com>

	* twisted/internet/app.py (DependentMultiService): a MultiService
	to start services in insert order and stop them in reverse.  Uses
	chained deferreds to ensure that if a startService or stopService
	returns a deferred, then the next service in the queue will wait
	until its dependency has finished.

2003-04-12  Brian Warner  <warner@lothar.com>

	* twisted/test/test_process.py (PosixProcessTestCasePTY): skip
	testStdio, testStderr, and testProcess. PTYs do not have separate
	stdout/stderr, so the tests just aren't relevant. testProcess
	might be, but it requires support for closing the write side
	separately from the read side, and I don't think our processPTY
	can do that quite yet.

	* twisted/test/test_tcp.py (LocalRemoteAddressTestCase): iterate
	harder. some systems might not connect to localhost before
	iterate() is called, flunking the test

	* twisted/test/test_process.py: only install SIGCHLD handler if the
	reactor offers a hook for it.

	* twisted/test/test_policies.py (ThrottlingTestCase.doIterations):
	add more iterations to accomodate reactors that do less IO per pass

	* twisted/test/process_signal.py: reset SIGHUP to default handler,
	fixes test failures in a 'nohup' environment

	* twisted/test/test_process.py (PosixProcessTestCasePTY): remove
	testClosePty.todo now that it works